# documento-printserver

./: .gitignore  .gitlab-ci.yml  99-escpos.rules  README.md  build-deb.sh  default.config.json  pyproject.toml  settings.toml  tox.ini
.github/workflows/: lint.yml  reformat.yml
debian/: changelog  control  copyright  documento-printserver.install  documento-printserver.service  documento-printserver.triggers  rules
documento_printserver/: config.py  print_server.py
