[tool.poetry]
name = "documento-printserver"
version = "0.1.0"
description = "Print server for documento"
authors = ["Jonathan Weth <git@jonathanweth.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
python-escpos = "^3.0a8"
python-barcode = "^0.13.1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
documento-printserver = "documento_printserver.print_server:print_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
